--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.2"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.13.5",
