--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^7.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.2"
+    "react-hook-form": "^7.56.2",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.13.5",
